# firstos

./: Cargo.toml  README.md  flake.nix  shell.nix
.builds/: test.yml
nix/: bootimage.nix  rust.nix  sources.json
src/: allocator.rs  gdt.rs  idt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  qemu.rs  serial.rs  structures.rs  vga.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  locked.rs  mod.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
