[package]
name = "firstos"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

[[bin]]
name = "kernel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.8"
spin = "0.7.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
