[package]
name = "firstos"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

[[bin]]
name = "kernel"

[package.metadata.bootimage]
test-args = [
          "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
          "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = "0.9.8"
spin = "0.7.1"
x86_64 = "0.13.1"
uart_16550 = "0.2.11"
bit_field = "0.10.1"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
