[package]
name = "firstos"
version = "0.1.0"
authors = ["Tim Deeb-Swihart <tim@deebswih.art>"]
edition = "2018"

[[bin]]
name = "kernel"

[features]
default = ["heap_fixed_block"]
heap_fixed_block = []
heap_linked_list = []
heap_bump = []

[package.metadata.bootimage]
test-args = [
          "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
          "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 30

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bootloader = {version = "0.9.16", features = ["map_physical_memory"] }
spin = "0.9.0"
x86_64 = "0.13.2"
uart_16550 = "0.2.12"
bit_field = "0.10.1"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.11"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
